# EventOS-Template

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  Makefile  README.md  mcp-rearchitect-plan.md
.claude/: settings.json
.claude/helpers/tool-grapher/: generate_tool_graph.py  tool_graph.sh
.claude/mcp/: eventos-template.py
.claude/mcp/eventos_template/: server.py  tools.py
.claude/mcp/eventos_template/handlers/: __init__.py  build_app.py  build_clean.py  container_build.py  container_remove.py  container_start.py  container_stop.py  formatting.py  list_tests.py  run_coverage.py  run_tests.py
.claude/mcp/eventos_template/helpers/: container.py  exec.py
.claude/mcp/eventos_template/lib/: paths.py  result.py  subprocess.py
.claude/skills/add-new-tool/: SKILL.md
.claude/skills/audit-tool-server/: SKILL.md
.claude/skills/create-skill/: SKILL.md
.claude/skills/improve-build-system/: SKILL.md
.claude/skills/improve-container/: SKILL.md
.claude/skills/improve-tool-server/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/skill-selector/: SKILL.md
.claude/skills/use-build-system/: SKILL.md
.claude/skills/use-container/: SKILL.md
.claude/skills/version-control/: SKILL.md
.claude/util/tool-grapher/: generate_tool_graph.py  tool_graph.sh
app/include/sample/: Sample.h  Sample_p.h
app/source/: main.c
app/source/sample/: Increment.c  Init.c  Transform.c
cmake/: toolchain-example.cmake
cmake/frameworks/eventos/: CMakeLists.txt
cmake/frameworks/posix/: CMakeLists.txt
cmake/frameworks/unittest/: CMakeLists.txt
cmake/frameworks/unittest/cmake/: UnitTestDiscovery.cmake
docker/: .env.example  Dockerfile  docker-compose.yaml  docker_env.sh
test/: CMakeLists.txt  Makefile
test/source/sample/: test_Increment.c  test_Init.c  test_Transform.c
